--- a/index.html
+++ b/index.html
@@ -3,15 +3,30 @@
   <head>
     <meta charset="utf-8">
     <meta name = "discription" content =  "唐木がくの静かな世界">
-    <title>GAKU</title>
+    <title>唐木岳です</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
 
 
 
   <body>
-  	<a href　= "https://www.amazon.co.jp/dp/B009GXM4BA/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1">θは遊んでくれたよ</a>
-    <p>Another Playmate θ by MORI Hiroshi</p>
+    <div class = "container">
+      <div class = "item-box green"></div>
+    </div>
+
+    <div class ="item">
+      <div class = "item-box yellow"></div>
+    </div>
+
+    <div class = "item">
+      <div class = "item-box red"></div>
+    </div>
+
+    <div class = "item">
+      <div class = "item-box blue"></div>
+    </div>
+
+  	
   </body>
 
   <footer>
