--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <div class = "container">
         <div class ="sky-arrow">
-          <img src = "IMG_2645.jpeg">
+          <h1>唐木がくのブログ</h1>
         </div>
       </div>
     </header>
