--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <div class = "blog">
       <h1>2020年7月2日</h1>
-      <p>昨日はそしてミランダを殺すという海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。アメリカの東海岸の話でよく大西洋に面した別荘が出てくるのですが、アメリカの東海岸のイメージが見たことがなくてよく分からなくちょっとつまずきましたが、それ以外はとても読みやすかったです。</p>
+      <p>昨日はそしてミランダを殺すという海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。アメリカの東海岸の話なのですが、行ったことがないのでイメージがわかなくてちょっとつまずきました。でもそれ以外はとても読みやすかったです。</p>
 
     </div>
     <footer>
