--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
 
   <body>
     <header>
-      <div class = "container">
-        <div class ="sky-arrow">
-          <h1>唐木がくのブログ</h1>
-        </div>
+      <div class ="header-title">
+      唐木岳のブログ
       </div>
+          
     </header>
-    <div class = "blog">
-      <h1>2020年7月2日</h1>
-      <p>昨日はそしてミランダを殺すという海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。アメリカの東海岸の話なのですが、行ったことがないのでイメージがわかなくてちょっとつまずきました。でもそれ以外はとても読みやすかったです。</p>
+    <div class = "main">
+      <div class = "july2">
+        <h1>2020年7月2日</h1>
+        <p>　昨日はそしてミランダを殺すという海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。合衆国東海岸の話なのですが、行ったことがないのでイメージがわかなくてちょっとつまずきました。でもそれ以外はとても読みやすかったです。
+        </p>
+        <img class = "miranda" src = "IMG_4655.jpg">
+        <p>
+          <a href = "https://www.amazon.co.jp/%E3%81%9D%E3%81%97%E3%81%A6%E3%83%9F%E3%83%A9%E3%83%B3%E3%83%80%E3%82%92%E6%AE%BA%E3%81%99-%E5%89%B5%E5%85%83%E6%8E%A8%E7%90%86%E6%96%87%E5%BA%AB-%E3%83%94%E3%83%BC%E3%82%BF%E3%83%BC%E3%83%BB%E3%82%B9%E3%83%AF%E3%83%B3%E3%82%BD%E3%83%B3/dp/4488173055">そしてミランダを殺す</a>
+        </p>
+      </div>  
 
     </div>
     <footer>
