--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </p>
         <img class = "miranda" src = "IMG_4655.jpg">
         <p>
-          <a href = "https://www.amazon.co.jp/%E3%81%9D%E3%81%97%E3%81%A6%E3%83%9F%E3%83%A9%E3%83%B3%E3%83%80%E3%82%92%E6%AE%BA%E3%81%99-%E5%89%B5%E5%85%83%E6%8E%A8%E7%90%86%E6%96%87%E5%BA%AB-%E3%83%94%E3%83%BC%E3%82%BF%E3%83%BC%E3%83%BB%E3%82%B9%E3%83%AF%E3%83%B3%E3%82%BD%E3%83%B3/dp/4488173055">そしてミランダを殺す</a>
+          <a href = "https://www.amazon.co.jp/%E3%81%9D%E3%81%97%E3%81%A6%E3%83%9F%E3%83%A9%E3%83%B3%E3%83%80%E3%82%92%E6%AE%BA%E3%81%99-%E5%89%B5%E5%85%83%E6%8E%A8%E7%90%86%E6%96%87%E5%BA%AB-%E3%83%94%E3%83%BC%E3%82%BF%E3%83%BC%E3%83%BB%E3%82%B9%E3%83%AF%E3%83%B3%E3%82%BD%E3%83%B3/dp/4488173055">The Kind Worth Killing by Peter Swanson 2015</a>
         </p>
 
         <h1>7月1日</h1>
