--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>唐木岳のブログ</title>
+    <title>唐木岳のblog</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class ="header-title">
-      唐木岳のブログ
+      唐木岳のblog
       </div>
           
     </header>
