--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
     </header>
     <div class = "main">
       <div class = "blog">
-        <h1>2020年7月1日</h1>
-        <p>　今日はそしてミランダを殺すという海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。合衆国東海岸の話なのですが、行ったことがないのでイメージがわかなくてちょっとつまずきました。でもそれ以外はとても読みやすかったです。
-        </p>
-        <img class = "books" src = "IMG_4655.jpg">
-        <p>
-          <a href = "https://www.amazon.co.jp/%E3%81%9D%E3%81%97%E3%81%A6%E3%83%9F%E3%83%A9%E3%83%B3%E3%83%80%E3%82%92%E6%AE%BA%E3%81%99-%E5%89%B5%E5%85%83%E6%8E%A8%E7%90%86%E6%96%87%E5%BA%AB-%E3%83%94%E3%83%BC%E3%82%BF%E3%83%BC%E3%83%BB%E3%82%B9%E3%83%AF%E3%83%B3%E3%82%BD%E3%83%B3/dp/4488173055">The Kind Worth Killing by Peter Swanson 2015</a>
-        </p>
+        <div class = "text">
+          <h1>2020年7月1日</h1>
+          <p>　今日はそしてミランダを殺すという海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。合衆国東海岸の話なのですが、行ったことがないのでイメージがわかなくてちょっとつまずきました。でもそれ以外はとても読みやすかったです。
+          </p>
+          <img class = "books" src = "IMG_4655.jpg">
+          <p>
+            <a href = "https://www.amazon.co.jp/%E3%81%9D%E3%81%97%E3%81%A6%E3%83%9F%E3%83%A9%E3%83%B3%E3%83%80%E3%82%92%E6%AE%BA%E3%81%99-%E5%89%B5%E5%85%83%E6%8E%A8%E7%90%86%E6%96%87%E5%BA%AB-%E3%83%94%E3%83%BC%E3%82%BF%E3%83%BC%E3%83%BB%E3%82%B9%E3%83%AF%E3%83%B3%E3%82%BD%E3%83%B3/dp/4488173055">The Kind Worth Killing by Peter Swanson 2015</a>
+          </p>
+        </div>
 
-        <h1>7月2日</h1>
-        <p>　昨日の予報通り晴れたので、朝から洗濯機を回して2日分の洗濯物を干しました。部屋の湿度がこの時期だといつも80%近くあるので、晴れた日は換気をします。夏の晴れた日の日差しが嫌なので雨や曇りの日もそれなりに好きだったのですが、今年はオンライン授業になって外に出ないので湿気のこもらない晴れの方が好きです。<br>　本のストックが5冊あり、次にどの本を読もうか楽しみです。早く読みたいですが、木曜日は一日学校とバイトがあるのであまりたくさん読めないのが残念です。</p>
-        <img class = "books" src = "IMG_4656.jpg">
+        <div class = "text">
+          <h1>7月2日</h1>
+          <p>　昨日の予報通り晴れたので、朝から洗濯機を回して2日分の洗濯物を干しました。部屋の湿度がこの時期だといつも80%近くあるので、晴れた日は換気をします。夏の晴れた日の日差しが嫌なので雨や曇りの日もそれなりに好きだったのですが、今年はオンライン授業になって外に出ないので湿気のこもらない晴れの方が好きです。<br>　本のストックが5冊あり、次にどの本を読もうか楽しみです。早く読みたいですが、木曜日は一日学校とバイトがあるのであまりたくさん読めないのが残念です。</p>
+          <img class = "books" src = "IMG_4656.jpg">
+        </div>
 
 
       </div>  
