--- a/index.html
+++ b/index.html
@@ -20,19 +20,37 @@
     <div class = "main">
       <div class = "blog">
         <div class = "text">
-          <h1>2020年7月1日</h1>
-          <p>　今日はそしてミランダを殺すという海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。合衆国東海岸の話なのですが、行ったことがないのでイメージがわかなくてちょっとつまずきました。でもそれ以外はとても読みやすかったです。
-          </p>
+          <div class = "script">
+            <h1>2020年7月1日</h1>
+            <p>　今日はそしてミランダを殺すという海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。合衆国東海岸の話なのですが、行ったことがないのでイメージがわかなくてちょっとつまずきました。でもそれ以外はとても読みやすかったです。
+            </p>
+          </div>
           <img class = "books" src = "IMG_4655.jpg">
-          <p>
-            <a href = "https://www.amazon.co.jp/%E3%81%9D%E3%81%97%E3%81%A6%E3%83%9F%E3%83%A9%E3%83%B3%E3%83%80%E3%82%92%E6%AE%BA%E3%81%99-%E5%89%B5%E5%85%83%E6%8E%A8%E7%90%86%E6%96%87%E5%BA%AB-%E3%83%94%E3%83%BC%E3%82%BF%E3%83%BC%E3%83%BB%E3%82%B9%E3%83%AF%E3%83%B3%E3%82%BD%E3%83%B3/dp/4488173055">The Kind Worth Killing by Peter Swanson 2015</a>
-          </p>
+            <p>
+              <a href = "https://www.amazon.co.jp/%E3%81%9D%E3%81%97%E3%81%A6%E3%83%9F%E3%83%A9%E3%83%B3%E3%83%80%E3%82%92%E6%AE%BA%E3%81%99-%E5%89%B5%E5%85%83%E6%8E%A8%E7%90%86%E6%96%87%E5%BA%AB-%E3%83%94%E3%83%BC%E3%82%BF%E3%83%BC%E3%83%BB%E3%82%B9%E3%83%AF%E3%83%B3%E3%82%BD%E3%83%B3/dp/4488173055">The Kind Worth Killing by Peter Swanson 2015</a>
+            </p>
         </div>
 
         <div class = "text">
-          <h1>7月2日</h1>
-          <p>　昨日の予報通り晴れたので、朝から洗濯機を回して2日分の洗濯物を干しました。部屋の湿度がこの時期だといつも80%近くあるので、晴れた日は換気をします。夏の晴れた日の日差しが嫌なので雨や曇りの日もそれなりに好きだったのですが、今年はオンライン授業になって外に出ないので湿気のこもらない晴れの方が好きです。<br>　本のストックが5冊あり、次にどの本を読もうか楽しみです。早く読みたいですが、木曜日は一日学校とバイトがあるのであまりたくさん読めないのが残念です。</p>
-          <img class = "books" src = "IMG_4656.jpg">
+          <div class = "script">
+            <h1>7月2日</h1>
+            <p>　昨日の予報通り晴れたので、朝から洗濯機を回して2日分の洗濯物を干しました。部屋の湿度がこの時期だといつも80%近くあるので、晴れた日は換気をします。夏の晴れた日の日差しが嫌なので雨や曇りの日もそれなりに好きだったのですが、今年はオンライン授業になって外に出ないので湿気のこもらない晴れの方が好きです。<br>　本のストックが5冊あり、次にどの本を読もうか楽しみです。早く読みたいですが、木曜日は一日学校とバイトがあるのであまりたくさん読めないのが残念です。</p>
+           </div> 
+           <img class = "books" src = "IMG_4656.jpg">
+        </div>
+        <div class = "text">
+          <div class = "script">
+            <h1>2020年7月3日</h1>
+            <p>　
+            　ちょっと悩んで村上春樹の『海辺のカフカ』を読み始めました。以前読み終えたとき、主人公が15歳なので自分が15歳になったらもう一度読みたいなと思っていましたが21歳になってしまいました。相変わらず面白いです。<br>
+            　同じ本を読んで他の人と同じ感想を持つことって基本的になくて、だから同じ感想を持ちたくて本を読むと、読み終わったときの面白さが同じ感想を持てたかそうでないかで決まっちゃうと思うんです。例えば、他にも面白いところがあっても泣けると評判の本を泣けると思って読むとその本の面白さが思ったより泣けたか泣けなかったかで決まっちゃいます。読み方的にもったいないかなと思っちゃいます。本のレビューを見るとこれで文句を言ってる人がとても多いです。自分はベタ褒め甘々おじさんなのでこういう感想を見つけると悲しくなります。結局、読書の向き不向きにも直結するのかなとちょっと思います。本に限らず漫画とか映画とか音楽とかの創作全般の話です。<br>
+            　この前Twitterで読書感想文が話題になったとき、読書感想文の意義はともかく読書関係が世間で話題になることがとても嬉しかったです。マイナー衰退ジャンルに光あれ
+            </p>
+          </div>
+          <img class = "books" src = "IMG_4056.jpeg">
+            <p>
+              <a href = ""></a>
+            </p>
         </div>
 
 
