--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           <div class = "script">
             <h1>2020年7月3日</h1>
             <p>
-            　ちょっと悩んで村上春樹の『海辺のカフカ』を読み始めました。以前読み終えたとき、主人公が15歳なので自分が15歳になったらもう一度読みたいなと思っていましたが21歳になってしまいました。相変わらず面白いです。<br>
-            　同じ本を読んで他の人と同じ感想を持つことって基本的になくて、だから同じ感想を持ちたくて本を読むと、読み終わったときの面白さが同じ感想を持てたかそうでないかで決まっちゃうと思うんです。例えば、泣けると評判の本を泣けると思って読むと他に面白いところがあったとしてもその本の面白さが思ってたより泣けたか泣けなかったかで決まってしまい読み方的にもったいないかなと思っちゃいます。本のレビューを見るとこれで文句を言ってる人がとても多いです。自分はベタ褒め甘々おじさんなのでこういう感想を見つけると悲しくなります。それに、読書に限らず漫画とか映画とか音楽とかの創作全般の話なんですけど、向き不向きにも直結するのかなとちょっと思います。<br>
+            　ちょっと悩んで村上春樹の『海辺のカフカ』を読み始めました。前に読み終えたとき、主人公が15歳なので自分が15歳になったらもう一度読みたいなと思っていましたが21歳になってしまいました。<br>
+            　同じ本を読んで他の人と同じ感想を持つことって基本的にないので、同じ感想を持とうと思って本を読んでしまうと、読み終えときの面白さが同じ感想を持てたかそうでないかで決まっちゃうと思うんです。泣けると評判の本を泣けると思って読むと、他に面白いところがあったとしてもその本の面白さが思ってたより泣けたか泣けなかったかで決まってしまい読み方的にもったいないかなと思っちゃいます。本のレビューを見るとこれで文句を言ってる人がとても多いです。自分はベタ褒め甘々おじさんなのでこういう感想を見つけると悲しくなります。それに、読書に限らず漫画とか映画とか音楽とかの創作全般の話なんですけど、向き不向きにも直結するのかなとちょっと思います。<br>
             　この前Twitterで読書感想文が話題になったとき、読書感想文の意義はともかく読書関係が世間で話題になることがとても嬉しかったです。マイナー衰退ジャンルに光あれ
             </p>
           </div>
