--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class = "text">
           <div class = "script">
             <h1>2020年7月1日</h1>
-            <p>　今日はそしてミランダを殺すという海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。合衆国東海岸の話なのですが、行ったことがないのでイメージがわかなくてちょっとつまずきました。でもそれ以外はとても読みやすかったです。
+            <p>　『そしてミランダを殺す』という海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。合衆国東海岸の話なのですが、行ったことがないのでイメージが湧かなくてちょっとつまずきました。でもそれ以外はとても読みやすかったです。
             </p>
           </div>
           <img class = "books" src = "IMG_4655.jpg">
@@ -34,7 +34,7 @@
         <div class = "text">
           <div class = "script">
             <h1>7月2日</h1>
-            <p>　昨日の予報通り晴れたので、朝から洗濯機を回して2日分の洗濯物を干しました。部屋の湿度がこの時期だといつも80%近くあるので、晴れた日は換気をします。夏の晴れた日の日差しが嫌なので雨や曇りの日もそれなりに好きだったのですが、今年はオンライン授業になって外に出ないので湿気のこもらない晴れの方が好きです。<br>　本のストックが5冊あり、次にどの本を読もうか楽しみです。早く読みたいですが、木曜日は一日学校とバイトがあるのであまりたくさん読めないのが残念です。</p>
+            <p>　昨日の予報通り晴れたので、朝から洗濯機を回して2日分の洗濯物を干しました。部屋の湿度がこの時期だといつも80%近くあるので、晴れた日は換気をします。夏の日差しが嫌なので雨や曇りの日もそれなりに好きでしたが、授業がオンラインになり外に出ないので湿気のこもらない晴れの方が今年は好きです。<br>　本のストックが5冊あり、次にどの本を読もうか楽しみです。早く読みたいですが、木曜日は一日学校とバイトがあるのであまりたくさん読めないのが残念です。</p>
            </div> 
            <img class = "books" src = "IMG_4656.jpg">
         </div>
@@ -42,7 +42,7 @@
           <div class = "script">
             <h1>2020年7月3日</h1>
             <p>
-            　ちょっと悩んで村上春樹の『海辺のカフカ』を読み始めました。前に読み終えたとき、主人公が15歳なので自分が15歳になったらもう一度読みたいなと思っていましたが21歳になってしまいました。<br>
+            　ちょっと悩んで『海辺のカフカ』を読むことにしました。前に読み終えたとき、主人公が15歳なので自分が15歳になったらもう一度読みたいなと思っていましたがだいぶ時間が経ってしまいました。<br>
             　同じ本を読んで他の人と同じ感想を持つことって基本的にないので、同じ感想を持とうと思って本を読んでしまうと、読み終えときの面白さが同じ感想を持てたかそうでないかで決まっちゃうと思うんです。泣けると評判の本を泣けると思って読むと、他に面白いところがあったとしてもその本の面白さが思ってたより泣けたか泣けなかったかで決まってしまい読み方的にもったいないかなと思っちゃいます。本のレビューを見るとこれで文句を言ってる人がとても多いです。自分はベタ褒め甘々おじさんなのでこういう感想を見つけると悲しくなります。それに、読書に限らず漫画とか映画とか音楽とかの創作全般の話なんですけど、向き不向きにも直結するのかなとちょっと思います。<br>
             　この前Twitterで読書感想文が話題になったとき、読書感想文の意義はともかく読書関係が世間で話題になることがとても嬉しかったです。マイナー衰退ジャンルに光あれ
             </p>
