--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class = "main">
       <div class = "blog">
         <div class = "text">
-          <div class = "script">
+          <div class = "sentence">
             <h1>2020年7月1日</h1>
             <p>　『そしてミランダを殺す』という海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。合衆国東海岸の話なのですが、行ったことがないのでイメージが湧かなくてちょっとつまずきました。でもそれ以外はとても読みやすかったです。
             </p>
@@ -32,17 +32,17 @@
         </div>
 
         <div class = "text">
-          <div class = "script">
+          <div class = "sentence">
             <h1>7月2日</h1>
             <p>　昨日の予報通り晴れたので、朝から洗濯機を回して2日分の洗濯物を干しました。部屋の湿度がこの時期だといつも80%近くあるので、晴れた日は換気をします。夏の日差しが嫌なので雨や曇りの日もそれなりに好きでしたが、授業がオンラインになり外に出ないので湿気のこもらない晴れの方が今年は好きです。<br>　本のストックが5冊あり、次にどの本を読もうか楽しみです。早く読みたいですが、木曜日は一日学校とバイトがあるのであまりたくさん読めないのが残念です。</p>
            </div> 
            <img class = "books" src = "IMG_4656.jpg">
         </div>
         <div class = "text">
-          <div class = "script">
-            <h1>2020年7月3日</h1>
+          <div class = "sentence">
+            <h1>7月3日</h1>
             <p>
-            　ちょっと悩んで『海辺のカフカ』を読むことにしました。前に読み終えたとき、主人公が15歳なので自分が同じ歳になったらもう一度読みたいなと思っていましたがだいぶ時間が経ってしまいました。<br>
+            　ちょっと悩んで『海辺のカフカ』を読むことにしました。最後に読んだのが中学生のときでしたが、話の筋はちゃんと覚えていました。今回は伏線を意識して読みたいです。<br>
             　同じ本を読んで他の人と同じ感想を持つことって基本的にないので、同じ感想を持とうと思って本を読んでしまうと、読み終えときの面白さが同じ感想を持てたかそうでないかで決まっちゃうと思うんです。泣けると評判の本を泣けると思って読むと、他に面白いところがあったとしてもその本の面白さが思ってたより泣けたか泣けなかったかで決まってしまい読み方的にもったいないかなと思っちゃいます。本のレビューを見るとこれで文句を言ってる人がとても多いです。自分はベタ褒め甘々おじさんなのでこういう感想を見つけると悲しくなります。それに、読書に限らず漫画とか映画とか音楽とかの創作全般の話なんですけど、向き不向きにも直結するのかなとちょっと思います。<br>
             　この前Twitterで読書感想文が話題になったとき、読書感想文の意義はともかく読書関係が世間で話題になることがとても嬉しかったです。マイナー衰退ジャンルに光あれ
             </p>
@@ -52,7 +52,20 @@
               <a href = ""></a>
             </p>
         </div>
-
+        <div class = "text">
+          <div class = "sentence">
+            <h1>7月4日</h1>
+            <p>
+              海辺のカフカの上巻を読み終えました。ページでいうと300ページ、時間でいうと3時間ほど今日は読みました。<br>
+              　自分は読むスピードがとても遅いです。毎日本を読んでいたら読むスピードが速くなりそうですが、全然そんなことありませんでした。習慣になる前と変わらないどころか少し遅くなってさえいるような気がします。具体的には、本によるんですけど100ページ読むのにだいたい1時間かかります。それに、個人的にはだいたいの本は話の序盤、ページを捲る手が止まらないというほど面白いわけではないので最初の方は特にゆっくり読んでます。
+            </p>
+          </div>
+          <img class = "books" src = "IMG_4657.jpg">
+            <p>
+              <a href = "https://www.amazon.co.jp/%E6%B5%B7%E8%BE%BA%E3%81%AE%E3%82%AB%E3%83%95%E3%82%AB-%E4%B8%8A-%E6%96%B0%E6%BD%AE%E6%96%87%E5%BA%AB-%E6%9D%91%E4%B8%8A-%E6%98%A5%E6%A8%B9/dp/4101001545">海辺のカフカ(上) by 村上春樹 2002</a>
+            </p>
+        </div>
+        
 
       </div>  
 
