--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           <div class = "sentence">
             <h1>7月4日</h1>
             <p>
-              海辺のカフカの上巻を読み終えました。ページでいうと300ページ、時間でいうと3時間ほど今日は読みました。<br>
-              　自分は読むスピードがとても遅いです。毎日本を読んでいたら読むスピードが速くなりそうですが、全然そんなことありませんでした。習慣になる前と変わらないどころか少し遅くなってさえいるような気がします。具体的には、本によるんですけど100ページ読むのにだいたい1時間かかります。それに、個人的にはだいたいの本は話の序盤、ページを捲る手が止まらないというほど面白いわけではないので最初の方は特にゆっくり読んでます。
+              　海辺のカフカの上巻を読み終えました。ページでいうと300ページ、時間でいうと3時間ほど今日は読みました。<br>
+              　自分の読むスピードはとても遅いです。毎日本を読んでいたら読むスピードが速くなりそうですが、全然そんなことありませんでした。習慣になる前と変わらないどころか少し遅くなってさえいるような気がします。本によるんですけど、具体的には100ページ読むのにだいたい1時間かかります。それに、だいたいの本は話の序盤ページを捲る手が止まらないというほど面白いわけではないので最初の方は特にゆっくり読んでます。
             </p>
           </div>
           <img class = "books" src = "IMG_4657.jpg">
