--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class = "sentence">
             <h1>7月3日</h1>
             <p>
-            　ちょっと悩んで『海辺のカフカ』を読むことにしました。最後に読んだのが中学生のときでしたが、話の筋はちゃんと覚えていました。今回は伏線を意識して読みたいです。<br>
+            　ちょっと悩んで『海辺のカフカ』を読むことにしました。最後に読んだのが中学生のときでしたが、話の筋はちゃんと覚えていました。今回は当時気づかなかった伏線に注意して読みたいです。<br>
             　同じ本を読んで他の人と同じ感想を持つことって基本的にないので、同じ感想を持とうと思って本を読んでしまうと、読み終えときの面白さが同じ感想を持てたかそうでないかで決まっちゃうと思うんです。泣けると評判の本を泣けると思って読むと、他に面白いところがあったとしてもその本の面白さが思ってたより泣けたか泣けなかったかで決まってしまい読み方的にもったいないかなと思っちゃいます。本のレビューを見るとこれで文句を言ってる人がとても多いです。自分はベタ褒め甘々おじさんなのでこういう感想を見つけると悲しくなります。それに、読書に限らず漫画とか映画とか音楽とかの創作全般の話なんですけど、向き不向きにも直結するのかなとちょっと思います。<br>
             　この前Twitterで読書感想文が話題になったとき、読書感想文の意義はともかく読書関係が世間で話題になることがとても嬉しかったです。マイナー衰退ジャンルに光あれ
             </p>
@@ -56,8 +56,8 @@
           <div class = "sentence">
             <h1>7月4日</h1>
             <p>
-              　海辺のカフカの上巻を読み終えました。ページでいうと300ページ、時間でいうと3時間ほど今日は読みました。<br>
-              　自分の読むスピードはとても遅いです。毎日本を読んでいたら読むスピードが速くなりそうですが、全然そんなことありませんでした。習慣になる前と変わらないどころか少し遅くなってさえいるような気がします。本によるんですけど、具体的には100ページ読むのにだいたい1時間かかります。それに、だいたいの本は話の序盤ページを捲る手が止まらないというほど面白いわけではないので最初の方は特にゆっくり読んでます。
+              　『海辺のカフカ』の上巻を読み終えました。ページでいうと300ページ、時間でいうと3時間ほど今日は読みました。<br>
+              　自分の読むスピードはちょっと遅いです。毎日本を読んでいたら読むスピードが速くなりそうですが、全然そんなことありませんでした。速くなるどころか前より少し遅くなってさえいるような気がします。本によるんですけど、具体的には100ページ読むのにだいたい1時間かかります。それに、だいたいの本は話の序盤、ページを捲る手が止まらないというほど面白くはないので、特にゆっくり読むことが多いです。
             </p>
           </div>
           <img class = "books" src = "IMG_4657.jpg">
