--- a/index.html
+++ b/index.html
@@ -21,22 +21,33 @@
       <div class = "blog">
         <div class = "text">
           <div class = "sentence">
-            <h1>2020年7月1日</h1>
-            <p>　『そしてミランダを殺す』という海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。合衆国東海岸の話なのですが、行ったことがないのでイメージが湧かなくてちょっとつまずきました。でもそれ以外はとても読みやすかったです。
+            <h1>7月5日</h1>
+            <p>
+            　何でさ誰も見てないのにblog五日間も続いてるんだろう。普通にやばくない?どこからこのモチベが湧いてるの?<br>
+             てかさそもそも大学ぼっちでblogって一番やっちゃダメだよねｗｗｗｗｗｗ<br>
+            　まあ、暇なうちだけかなこれ続けるのも<br>
+            　10日に給料が入ってSwitch買い直す予定だから、そしたら忙しくてパタっ...と投稿が止まるんじゃないかな。<br>
+            　まだ物流滞ってて常に店頭に並んでるわけじゃないんだけど、極秘ルートから手に入れた情報によるとヤマダ電機には朝一にあるらしいんだよねここだけの話。<br>
+            　いやあ。最後にSwitch触ってからもう2ヶ月近く経ってるんだよなあ。流石に何週間かしたらSwitchない生活にも慣れたけど、いざあと数日で手に入ると思うともう待ちきれない。時間が過ぎるのが遅すぎる!!
             </p>
           </div>
-          <img class = "books" src = "IMG_4655.jpg">
+          <img class = "books" src = "IMG_4660.jpg">
             <p>
-              <a href = "https://www.amazon.co.jp/%E3%81%9D%E3%81%97%E3%81%A6%E3%83%9F%E3%83%A9%E3%83%B3%E3%83%80%E3%82%92%E6%AE%BA%E3%81%99-%E5%89%B5%E5%85%83%E6%8E%A8%E7%90%86%E6%96%87%E5%BA%AB-%E3%83%94%E3%83%BC%E3%82%BF%E3%83%BC%E3%83%BB%E3%82%B9%E3%83%AF%E3%83%B3%E3%82%BD%E3%83%B3/dp/4488173055">The Kind Worth Killing by Peter Swanson 2015</a>
+              <a href = ""></a>
             </p>
         </div>
-
         <div class = "text">
           <div class = "sentence">
-            <h1>7月2日</h1>
-            <p>　昨日の予報通り晴れたので、朝から洗濯機を回して2日分の洗濯物を干しました。部屋の湿度がこの時期だといつも80%近くあるので、晴れた日は換気をします。夏の日差しが嫌なので雨や曇りの日もそれなりに好きでしたが、授業がオンラインになり外に出ないので湿気のこもらない晴れの方が今年は好きです。<br>　本のストックが5冊あり、次にどの本を読もうか楽しみです。早く読みたいですが、木曜日は一日学校とバイトがあるのであまりたくさん読めないのが残念です。</p>
-           </div> 
-           <img class = "books" src = "IMG_4656.jpg">
+            <h1>7月4日</h1>
+            <p>
+              　『海辺のカフカ』の上巻を読み終えました。ページでいうと300ページ、時間でいうと3時間ほど今日は読みました。<br>
+              　自分の読むスピードはちょっと遅いです。毎日本を読んでいたら読むスピードが速くなりそうですが、全然そんなことありませんでした。速くなるどころか前より少し遅くなってさえいるような気がします。本によるんですけど、具体的には100ページ読むのにだいたい1時間かかります。それに、だいたいの本は話の序盤、ページを捲る手が止まらないというほど面白くはないので、特にゆっくり読むことが多いです。
+            </p>
+          </div>
+          <img class = "books" src = "IMG_4657.jpg">
+            <p>
+              <a href = "https://www.amazon.co.jp/%E6%B5%B7%E8%BE%BA%E3%81%AE%E3%82%AB%E3%83%95%E3%82%AB-%E4%B8%8A-%E6%96%B0%E6%BD%AE%E6%96%87%E5%BA%AB-%E6%9D%91%E4%B8%8A-%E6%98%A5%E6%A8%B9/dp/4101001545">海辺のカフカ(上) by 村上春樹 2002</a>
+            </p>
         </div>
         <div class = "text">
           <div class = "sentence">
@@ -54,15 +65,20 @@
         </div>
         <div class = "text">
           <div class = "sentence">
-            <h1>7月4日</h1>
-            <p>
-              　『海辺のカフカ』の上巻を読み終えました。ページでいうと300ページ、時間でいうと3時間ほど今日は読みました。<br>
-              　自分の読むスピードはちょっと遅いです。毎日本を読んでいたら読むスピードが速くなりそうですが、全然そんなことありませんでした。速くなるどころか前より少し遅くなってさえいるような気がします。本によるんですけど、具体的には100ページ読むのにだいたい1時間かかります。それに、だいたいの本は話の序盤、ページを捲る手が止まらないというほど面白くはないので、特にゆっくり読むことが多いです。
+            <h1>7月2日</h1>
+            <p>　昨日の予報通り晴れたので、朝から洗濯機を回して2日分の洗濯物を干しました。部屋の湿度がこの時期だといつも80%近くあるので、晴れた日は換気をします。夏の日差しが嫌なので雨や曇りの日もそれなりに好きでしたが、授業がオンラインになり外に出ないので湿気のこもらない晴れの方が今年は好きです。<br>　本のストックが5冊あり、次にどの本を読もうか楽しみです。早く読みたいですが、木曜日は一日学校とバイトがあるのであまりたくさん読めないのが残念です。</p>
+           </div> 
+           <img class = "books" src = "IMG_4656.jpg">
+        </div>
+        <div class = "text">
+          <div class = "sentence">
+            <h1>2020年7月1日</h1>
+            <p>　『そしてミランダを殺す』という海外の本を読みました。あらすじを読んで、何となく交換殺人ものなのかなと思いましたが、実際読んでみると全然違いました。こういうことは本を読んでいるとよくあります。合衆国東海岸の話なのですが、行ったことがないのでイメージが湧かなくてちょっとつまずきました。でもそれ以外はとても読みやすかったです。
             </p>
           </div>
-          <img class = "books" src = "IMG_4657.jpg">
+          <img class = "books" src = "IMG_4655.jpg">
             <p>
-              <a href = "https://www.amazon.co.jp/%E6%B5%B7%E8%BE%BA%E3%81%AE%E3%82%AB%E3%83%95%E3%82%AB-%E4%B8%8A-%E6%96%B0%E6%BD%AE%E6%96%87%E5%BA%AB-%E6%9D%91%E4%B8%8A-%E6%98%A5%E6%A8%B9/dp/4101001545">海辺のカフカ(上) by 村上春樹 2002</a>
+              <a href = "https://www.amazon.co.jp/%E3%81%9D%E3%81%97%E3%81%A6%E3%83%9F%E3%83%A9%E3%83%B3%E3%83%80%E3%82%92%E6%AE%BA%E3%81%99-%E5%89%B5%E5%85%83%E6%8E%A8%E7%90%86%E6%96%87%E5%BA%AB-%E3%83%94%E3%83%BC%E3%82%BF%E3%83%BC%E3%83%BB%E3%82%B9%E3%83%AF%E3%83%B3%E3%82%BD%E3%83%B3/dp/4488173055">The Kind Worth Killing by Peter Swanson 2015</a>
             </p>
         </div>
         
