--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@
       <div class = "blog">
         <div class = "text">
           <div class = "sentence">
+            <h1>7月7日</h1>
+            <p>
+              　今日は七夕です。小さい頃は一年間も会えないなんてなんて寂しいんだろうと思っていました。この歳になってみると、一年会えなくても意中の人がいるならいいじゃないかとか、一年に一度会えるならいいじゃないかとか、そもそも一年会えないなら浮気しているんじゃないかなんて考えたりします。法律では二十歳で成人になりますが、織姫と彦星の浮気を疑うようになって初めて人は大人になるのかもしれませんね。
+            </p>
+          </div>
+          <img class = "books" src = "IMG_3621.jpeg">
+            <p>
+              <a href = ""></a>
+            </p>
+        </div>
+        <div class = "text">
+          <div class = "sentence">
+            <h1>7月6日</h1>
+            <p>
+              　『海辺のカフカ』の下巻を200ページほど読み進めました。朝はいつもより早い時間に起きて、10時過ぎに家を出ました。本当は10時半から授業があったのですが。それからバイトを終えて、夕飯を食べて日を跨いだ頃から眠くて頭痛がしたのでいつもより早い時間に寝ました。<br>
+              　部屋の中でコバエをチラチラ見かけます。昨年大量発生してしまい、今年は気をつけようと思って、生ゴミや食事に使ったゴミは全部ポリ袋に入れて捨てるようにしました。それでも少し見かけるのでたぶんエアコンか何かに巣みたいなものができているのかなと思います。気になりますね。
+            </p>
+          </div>
+          <img class = "books" src = "IMG_3677.jpeg">
+            <p>
+              <a href = ""></a>
+            </p>
+        </div>
+        <div class = "text">
+          <div class = "sentence">
             <h1>7月5日</h1>
             <p>
             　何でさ誰も見てないのにblog五日間も続いてるんだろう。普通にやばくない?どこからこのモチベが湧いてるの?<br>
