--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class = "sentence">
             <h1>7月7日</h1>
             <p>
-              　今日は七夕です。小さい頃は一年間も会えないなんてなんて寂しいんだろうと思っていました。この歳になってみると、一年会えなくても意中の人がいるならいいじゃないかとか、一年に一度会えるならいいじゃないかとか、そもそも一年会えないなら浮気しているんじゃないかなんて考えたりします。法律では二十歳で成人になりますが、織姫と彦星の浮気を疑うようになって初めて人は大人になるのかもしれませんね。
+              　今日は七夕です。小さい頃は一年間も会えないなんてなんて寂しいんだろうと思っていました。ですが、この歳になってみると、一年会えなくても意中の相手がいるならいいじゃないかとか、一年に一度会えるならいいじゃないかとか、そもそも一年会えないなら浮気しているんじゃないかなんて考えたりします。法律では二十歳で成人になりますが、織姫と彦星の浮気を疑うようになって初めて人は大人になるのかもしれませんね。
             </p>
           </div>
           <img class = "books" src = "IMG_3621.jpeg">
