--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
       <div class = "blog">
         <div class = "text">
           <div class = "sentence">
+            <h1>7月8日</h1>
+            <p>
+              　『海辺のカフカ』の下巻を読み終えました。この作家の話はテーマが重かったりするのですが、それでも最後は明るい話が多いので好きです。読み終える前は学校がうまくいかなくてどうしようかと悩んでいたんですけど、この本を読んでやる気が出ました。当時の自分がどのペースでこの本を読んでいたのか少し気になりました。 <br>
+              　コバエはゴミ袋を捨てたらいなくなりました。
+            </p>
+          </div>
+          <img class = "books" src = "IMG_4661.HEIC">
+            <p>
+              <a href = "https://www.amazon.co.jp/%E6%B5%B7%E8%BE%BA%E3%81%AE%E3%82%AB%E3%83%95%E3%82%AB-%E4%B8%8B-%E6%96%B0%E6%BD%AE%E6%96%87%E5%BA%AB-%E6%9D%91%E4%B8%8A-%E6%98%A5%E6%A8%B9/dp/4101001553/ref=pd_lpo_14_img_0/357-5545956-9807100?_encoding=UTF8&pd_rd_i=4101001553&pd_rd_r=88392640-13e4-4e01-9f53-3ada59c412c9&pd_rd_w=lk07H&pd_rd_wg=61Vp5&pf_rd_p=4b55d259-ebf0-4306-905a-7762d1b93740&pf_rd_r=V1MJBXNCGFXG40RXXWR7&psc=1&refRID=V1MJBXNCGFXG40RXXWR7">海辺のカフカ(下) by 村上春樹</a>
+            </p>
+        </div>
+        <div class = "text">
+          <div class = "sentence">
             <h1>7月7日</h1>
             <p>
               　今日は七夕です。小さい頃は一年間も会えないなんてなんて寂しいんだろうと思っていました。ですが、この歳になってみると、一年会えなくても意中の相手がいるならいいじゃないかとか、一年に一度会えるならいいじゃないかとか、そもそも一年会えないなら浮気しているんじゃないかなんて考えたりします。法律では二十歳で成人になりますが、織姫と彦星の浮気を疑うようになって初めて人は大人になるのかもしれませんね。
