--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
       <div class = "blog">
         <div class = "text">
           <div class = "sentence">
+            <h1>7月10日</h1>
+            <p>
+            　念願の給料日がいよいよやってきました。喜び勇足で朝一にヤマダ電機に向かったのですが、Switchは売っていませんでした。これから一週間ほど毎日トライします。<br>
+            　『五匹の子豚』という本を40%ほど読み終えているので、今日あたりに読み終えると思っていたのですが、予定が立て込んでしまい今日中に読み終えるか怪しいところです。このラップトップが古すぎて、pythonでtkinterが動かなかったおかげで先生とリモートで一時間半ほど追加の授業をしました。今欲しいのはiMacと動画や本を観たり読んだりするのにiPadが欲しいです。どちらも最新モデルでなくていいので欲しいのですが、いくらくらいが相場なのでしょうか。それにAirPods Proも魅力的です。まあ、その前にSwitchがないと話にならないのですが。<br>
+            　先週の水曜日以来ずっと曇りか雨です。一昨日の夕方晴れたのを例外にするとですが。さすがに部屋の湿度が抜けなくて鬱になりそうです。お天道様、いつ晴れるのでしょうか?
+            </p>
+          </div>
+          <img class = "books" src = "IMG_4546.jpg">
+            <p>
+              <a href = ""></a>
+            </p>
+        </div>
+        <div class = "text">
+          <div class = "sentence">
             <h1>7月8日</h1>
             <p>
               　『海辺のカフカ』の下巻を読み終えました。この作家の話はテーマが重かったりするのですが、それでも最後は明るい話が多いので好きです。読み終える前は学校がうまくいかなくてどうしようかと悩んでいたんですけど、この本を読んでやる気が出ました。当時の自分がどのペースでこの本を読んでいたのか少し気になりました。 <br>
@@ -29,7 +43,7 @@
           </div>
           <img class = "books" src = "IMG_4661.jpg">
             <p>
-              <a href = "https://www.amazon.co.jp/%E6%B5%B7%E8%BE%BA%E3%81%AE%E3%82%AB%E3%83%95%E3%82%AB-%E4%B8%8B-%E6%96%B0%E6%BD%AE%E6%96%87%E5%BA%AB-%E6%9D%91%E4%B8%8A-%E6%98%A5%E6%A8%B9/dp/4101001553/ref=pd_lpo_14_img_0/357-5545956-9807100?_encoding=UTF8&pd_rd_i=4101001553&pd_rd_r=88392640-13e4-4e01-9f53-3ada59c412c9&pd_rd_w=lk07H&pd_rd_wg=61Vp5&pf_rd_p=4b55d259-ebf0-4306-905a-7762d1b93740&pf_rd_r=V1MJBXNCGFXG40RXXWR7&psc=1&refRID=V1MJBXNCGFXG40RXXWR7">海辺のカフカ(下) by 村上春樹</a>
+              <a href = "https://www.amazon.co.jp/%E6%B5%B7%E8%BE%BA%E3%81%AE%E3%82%AB%E3%83%95%E3%82%AB-%E4%B8%8B-%E6%96%B0%E6%BD%AE%E6%96%87%E5%BA%AB-%E6%9D%91%E4%B8%8A-%E6%98%A5%E6%A8%B9/dp/4101001553/ref=pd_lpo_14_img_0/357-5545956-9807100?_encoding=UTF8&pd_rd_i=4101001553&pd_rd_r=88392640-13e4-4e01-9f53-3ada59c412c9&pd_rd_w=lk07H&pd_rd_wg=61Vp5&pf_rd_p=4b55d259-ebf0-4306-905a-7762d1b93740&pf_rd_r=V1MJBXNCGFXG40RXXWR7&psc=1&refRID=V1MJBXNCGFXG40RXXWR7">海辺のカフカ(下) by 村上春樹 2002</a>
             </p>
         </div>
         <div class = "text">
